# llm-syntax

./: .gitignore  README.md  TODO.md  author_llm_pair_compare.py  binomial.py  boxplots.py  compare_authors_llms.py  compute_coverage.py  construction_frequencies.py  count_constructions.py  create_small_datasets.py  erg.py  extract_examples.py  extract_sentences.py  find_interesting_constr.py  heatmaps.py  pca.py  pytest.ini  sentences2authors.py  supertypes.py  util.py
analysis/: model-ids.json
analysis/frequencies-json/: 02-05-2025-original-frequencies.json  README.md  frequencies-2023-repro.json  (+12 more)
scripts/: author_llm_pair_compare.py  compare_authors_llms.py  compute_coverage.py  construction_frequencies.py  count_constructions.py  count_lextypes.py  diversity.py  diversity_curve.py  diversity_depth.py  erg.py  extract_ex_JSD.py  extract_examples.py  extract_sentences.py  find_interesting_constr.py  pca.py  sentences2authors.py  type-tok.py  util.py  visualize_frequencies.py
tests/: test_construction_frequencies.py  test_count_constructions.py  test_erg.py  test_extract_examples.py  test_find_interesting_constr.py  test_util.py
text_generator/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
text_generator/src/articles_searcher/: articles_searcher.py  utils.py
text_generator/src/config/: config.yaml
text_generator/src/parser/: stanza_parsing_generated.py  stanza_parsing_retrieved.py
text_generator/src/text_generator/: config_loader.py  main.py  text_generator.py  utils.py
text_generator/tests/: conftest.py  pytest.ini  test_config_load.py
(+15 files in other folders)
